--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   http: ^0.13.5
   #json 직렬화 관련
   json_annotation: ^4.8.0
+  # rest API 통신
+  chopper: ^6.1.4
+  get: ^4.6.5
+  pretty_chopper_logger: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +38,26 @@ dev_dependencies:
   build_runner: ^2.3.3
   #json 직렬화
   json_serializable: ^6.6.1
+  # rest API 통신
+  chopper_generator: ^6.0.3
+
+fonts:
+  - family: Noto_Serif_KR
+    fonts:
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-Thin.ttf
+        weight: 200
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-ExtraLight.ttf
+        weight: 300
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-Light.ttf
+        weight: 400
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-Regular.ttf
+        weight: 500
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-Medium.ttf
+        weight: 600
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-SemiBold.ttf
+        weight: 700
+      - asset: assets/font/Noto_Sans_KR/static/NotoSansKR-Bold.ttf
+        weight: 900
 
 flutter:
   uses-material-design: true
